--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <title>Gitの勉強</title>
+    <title>Gitの勉強2</title>
   </head>
   <body>
     <h1>gh-pagesブランチはGitHub Pagesに公開されます。</h1>
